Change Name, add good button images

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -247,7 +247,7 @@
         android:background="colora"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
-        android:src="@drawable/forward"
+        android:src="@drawable/next"
         android:scaleType="centerInside"
         android:text="9"
         android:textSize="35sp"
@@ -291,7 +291,7 @@
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:scaleType="centerInside"
-        android:src="@drawable/back"
+        android:src="@drawable/backspace"
         android:text="7"
         android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="@+id/text0"
