--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,10 @@
         android:id="@+id/text4"
         android:layout_width="0dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="0dp"
         android:layout_marginEnd="19dp"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="19dp"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="4"
@@ -35,20 +33,13 @@
         android:id="@+id/text5"
         android:layout_width="0dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="1dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="5"
         android:textSize="35sp"
-        app:layout_constraintBottom_toTopOf="@+id/text8"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/text4"
-        app:layout_constraintRight_toLeftOf="@+id/currSingleSeconds"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        tools:layout_editor_absoluteX="121dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/text2" />
 
     <TextView
         android:id="@+id/text6"
@@ -88,12 +79,10 @@
         android:fontFamily="serif"
         android:text="0"
         android:textSize="35sp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/currSingleMinutes"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintRight_toLeftOf="@+id/currSingleMinutes"
         app:layout_constraintLeft_toRightOf="@+id/labelHours"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:id="@+id/currTenSeconds"
@@ -156,15 +145,14 @@
         android:layout_width="135dp"
         android:layout_height="75dp"
         android:layout_marginEnd="100dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginLeft="101dp"
+        android:layout_marginRight="100dp"
         android:layout_marginStart="101dp"
         android:layout_marginTop="33dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="2"
         android:textSize="35sp"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toRightOf="@+id/text1"
         app:layout_constraintRight_toLeftOf="@+id/text3"
         app:layout_constraintTop_toBottomOf="@+id/currSingleMinutes"
@@ -200,7 +188,6 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="@+id/text5"
         app:layout_constraintRight_toRightOf="@+id/text5"
-        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_editor_absoluteY="251dp" />
@@ -216,7 +203,6 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="@+id/text5"
         app:layout_constraintRight_toRightOf="@+id/text5"
-        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_editor_absoluteY="331dp" />
@@ -235,8 +221,6 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1"
         app:layout_constraintLeft_toRightOf="@+id/text8"
-        android:layout_marginTop="0dp"
-        android:layout_marginLeft="0dp"
         app:layout_constraintHorizontal_bias="0.0" />
 
     <ImageButton
@@ -244,7 +228,6 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:layout_marginTop="80dp"
-        android:background="colora"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:src="@drawable/next"
@@ -284,10 +267,7 @@
         android:layout_width="105dp"
         android:layout_height="80dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
         android:layout_marginTop="8dp"
-        android:background="asjdio"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:scaleType="centerInside"
@@ -309,13 +289,10 @@
         android:text="0"
         android:textSize="35sp"
         android:layout_marginStart="1dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/labelMinutes"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintLeft_toRightOf="@+id/currTenMinutes"
+        android:layout_marginLeft="-1dp"
+        app:layout_constraintTop_toTopOf="@+id/currTenMinutes"
+        android:layout_marginTop="0dp" />
 
     <TextView
         android:id="@+id/currSingleSeconds"
@@ -340,10 +317,10 @@
         android:text="m"
         android:paddingBottom="6dp"
         android:textSize="15sp"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/currTenSeconds"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toRightOf="@+id/currSingleMinutes" />
+        app:layout_constraintLeft_toRightOf="@+id/currSingleMinutes"
+        app:layout_constraintTop_toTopOf="@+id/currSingleMinutes"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="20dp" />
 
     <TextView
         android:id="@+id/currentSeconds"
