--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
         app:layout_constraintRight_toLeftOf="@+id/currTenMinutes"
         android:layout_marginRight="8dp"
         app:layout_constraintTop_toTopOf="@+id/labelMinutes"
-        android:layout_marginTop="0dp" />
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/currTenMinutes"
@@ -80,7 +80,7 @@
         app:layout_constraintLeft_toRightOf="@+id/labelMinutes"
         android:layout_marginLeft="8dp"
         app:layout_constraintTop_toTopOf="@+id/currTenMinutes"
-        android:layout_marginTop="0dp" />
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/currSingleHours"
@@ -90,9 +90,7 @@
         android:text="0"
         android:textSize="35sp"
         app:layout_constraintRight_toLeftOf="@+id/labelHours"
-        android:layout_marginRight="0dp"
-        app:layout_constraintTop_toTopOf="@+id/currTenMinutes"
-        android:layout_marginTop="0dp" />
+        app:layout_constraintTop_toTopOf="@+id/currTenMinutes" />
 
     <TextView
         android:id="@+id/currTenHours"
@@ -102,42 +100,52 @@
         android:text="0"
         android:textSize="35sp"
         app:layout_constraintRight_toLeftOf="@+id/currSingleHours"
-        android:layout_marginRight="0dp"
-        app:layout_constraintTop_toTopOf="@+id/currTenMinutes"
-        android:layout_marginTop="0dp" />
+        app:layout_constraintTop_toTopOf="@+id/currTenMinutes" />
 
     <TextView
         android:id="@+id/text1"
-        android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_width="122dp"
+        android:layout_height="75dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="1"
         android:textSize="35sp"
-        tools:layout_editor_absoluteY="101dp"
-        tools:layout_editor_absoluteX="18dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/text2"
+        app:layout_constraintTop_toTopOf="@+id/text2"
+        tools:layout_editor_absoluteX="9dp"
+        app:layout_constraintHorizontal_bias="1.0" />
 
     <TextView
         android:id="@+id/text2"
-        android:layout_width="135dp"
+        android:layout_width="122dp"
         android:layout_height="75dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="2"
         android:textSize="35sp"
-        tools:layout_editor_absoluteY="108dp"
-        tools:layout_editor_absoluteX="38dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/currSingleMinutes" />
 
     <TextView
         android:id="@+id/text3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="121dp"
+        android:layout_height="75dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="3"
         android:textSize="35sp"
-        tools:layout_editor_absoluteY="101dp"
-        tools:layout_editor_absoluteX="141dp" />
+        app:layout_constraintLeft_toRightOf="@+id/text2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/text2" />
 
     <TextView
         android:id="@+id/text8"
@@ -218,9 +226,7 @@
         android:text="0"
         android:textSize="35sp"
         app:layout_constraintTop_toTopOf="@+id/currTenMinutes"
-        android:layout_marginTop="0dp"
-        app:layout_constraintLeft_toRightOf="@+id/currTenMinutes"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintLeft_toRightOf="@+id/currTenMinutes" />
 
     <TextView
         android:id="@+id/currSingleSeconds"
@@ -230,9 +236,7 @@
         android:text="0"
         android:textSize="35sp"
         app:layout_constraintLeft_toRightOf="@+id/currTenSeconds"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintTop_toTopOf="@+id/currTenSeconds"
-        android:layout_marginTop="0dp" />
+        app:layout_constraintTop_toTopOf="@+id/currTenSeconds" />
 
     <TextView
         android:id="@+id/labelMinutes"
@@ -244,7 +248,6 @@
         android:paddingBottom="6dp"
         android:textSize="15sp"
         app:layout_constraintLeft_toRightOf="@+id/currSingleMinutes"
-        android:layout_marginLeft="-1dp"
         app:layout_constraintTop_toTopOf="@+id/currSingleMinutes"
         android:layout_marginTop="21dp" />
 
@@ -258,7 +261,5 @@
         android:text="s"
         android:textSize="15sp"
         app:layout_constraintTop_toTopOf="@+id/labelMinutes"
-        android:layout_marginTop="0dp"
-        app:layout_constraintLeft_toRightOf="@+id/currSingleSeconds"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintLeft_toRightOf="@+id/currSingleSeconds" />
 </android.support.constraint.ConstraintLayout>
