--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,30 +18,43 @@
         android:gravity="center_horizontal"
         android:text="4"
         android:textSize="35sp"
-        tools:layout_editor_absoluteY="183dp"
-        tools:layout_editor_absoluteX="18dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/text1"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintRight_toLeftOf="@+id/text5"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/text2" />
 
     <TextView
         android:id="@+id/text5"
-        android:layout_width="0dp"
+        android:layout_width="122dp"
         android:layout_height="80dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="-1dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="5"
         android:textSize="35sp"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="184dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/text2"
+        app:layout_constraintRight_toLeftOf="@+id/text3"
+        app:layout_constraintTop_toBottomOf="@+id/text2"
+        app:layout_constraintHorizontal_bias="0.428" />
 
     <TextView
         android:id="@+id/text6"
-        android:layout_width="0dp"
+        android:layout_width="122dp"
         android:layout_height="80dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="6"
         android:textSize="35sp"
-        tools:layout_editor_absoluteY="176dp"
-        tools:layout_editor_absoluteX="141dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/text3"
+        app:layout_constraintRight_toRightOf="@+id/text3"
+        app:layout_constraintTop_toBottomOf="@+id/text2" />
 
     <TextView
         android:id="@+id/labelHours"
@@ -155,8 +168,12 @@
         android:gravity="center_horizontal"
         android:text="8"
         android:textSize="35sp"
-        tools:layout_editor_absoluteY="251dp"
-        tools:layout_editor_absoluteX="121dp" />
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/text5"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="@+id/text2"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/text2" />
 
     <TextView
         android:id="@+id/text0"
@@ -166,19 +183,27 @@
         android:gravity="center_horizontal"
         android:text="0"
         android:textSize="35sp"
-        tools:layout_editor_absoluteY="331dp"
-        tools:layout_editor_absoluteX="121dp" />
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/text8"
+        app:layout_constraintRight_toLeftOf="@+id/text9"
+        android:layout_marginRight="0dp"
+        app:layout_constraintLeft_toRightOf="@+id/text7"
+        android:layout_marginLeft="0dp" />
 
     <TextView
         android:id="@+id/text9"
-        android:layout_width="0dp"
+        android:layout_width="122dp"
         android:layout_height="80dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="9"
         android:textSize="35sp"
-        tools:layout_editor_absoluteY="256dp"
-        tools:layout_editor_absoluteX="141dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/text6"
+        app:layout_constraintRight_toRightOf="@+id/text6"
+        app:layout_constraintTop_toBottomOf="@+id/text6" />
 
     <ImageButton
         android:id="@+id/textGo"
@@ -191,32 +216,44 @@
         android:text="9"
         android:textSize="35sp"
         android:visibility="visible"
-        tools:layout_editor_absoluteY="336dp"
-        tools:layout_editor_absoluteX="141dp" />
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="@+id/text9"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/text9"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/text9" />
 
     <TextView
         android:id="@+id/text7"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="122dp"
+        android:layout_height="80dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="7"
         android:textSize="35sp"
-        tools:layout_editor_absoluteY="264dp"
-        tools:layout_editor_absoluteX="18dp" />
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/text4"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/text4"
+        app:layout_constraintRight_toLeftOf="@+id/text5"
+        android:layout_marginRight="0dp" />
 
     <ImageButton
         android:id="@+id/textClearLast"
-        android:layout_width="105dp"
+        android:layout_width="122dp"
         android:layout_height="80dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:scaleType="centerInside"
         android:src="@drawable/backspace"
         android:text="7"
         android:textSize="35sp"
-        tools:layout_editor_absoluteY="334dp"
-        tools:layout_editor_absoluteX="18dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/text7"
+        app:layout_constraintRight_toLeftOf="@+id/text0"
+        app:layout_constraintTop_toBottomOf="@+id/text7" />
 
     <TextView
         android:id="@+id/currSingleMinutes"
