--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,19 +19,13 @@
         android:text="4"
         android:textSize="35sp"
         app:layout_constraintLeft_toLeftOf="@+id/text1"
-        android:layout_marginLeft="0dp"
         app:layout_constraintRight_toLeftOf="@+id/text5"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/text2" />
 
     <TextView
         android:id="@+id/text5"
         android:layout_width="122dp"
         android:layout_height="80dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="-1dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="5"
@@ -45,9 +39,6 @@
         android:id="@+id/text6"
         android:layout_width="122dp"
         android:layout_height="80dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="6"
@@ -76,12 +67,12 @@
         android:layout_height="wrap_content"
         android:fontFamily="serif"
         android:text="0"
-        android:textSize="35sp"
+        android:textSize="60sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp"
-        app:layout_constraintHorizontal_bias="0.44" />
+        android:layout_marginTop="40dp"
+        app:layout_constraintHorizontal_bias="0.442" />
 
     <TextView
         android:id="@+id/currTenSeconds"
@@ -89,7 +80,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="serif"
         android:text="0"
-        android:textSize="35sp"
+        android:textSize="60sp"
         app:layout_constraintLeft_toRightOf="@+id/labelMinutes"
         android:layout_marginLeft="8dp"
         app:layout_constraintTop_toTopOf="@+id/currTenMinutes"
@@ -101,27 +92,26 @@
         android:layout_height="wrap_content"
         android:fontFamily="serif"
         android:text="0"
-        android:textSize="35sp"
+        android:textSize="60sp"
         app:layout_constraintRight_toLeftOf="@+id/labelHours"
         app:layout_constraintTop_toTopOf="@+id/currTenMinutes" />
 
     <TextView
         android:id="@+id/currTenHours"
-        android:layout_width="20dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="serif"
         android:text="0"
-        android:textSize="35sp"
+        android:textSize="60sp"
         app:layout_constraintRight_toLeftOf="@+id/currSingleHours"
-        app:layout_constraintTop_toTopOf="@+id/currTenMinutes" />
+        app:layout_constraintTop_toTopOf="@+id/currSingleHours"
+        android:layout_marginTop="0dp" />
 
     <TextView
         android:id="@+id/text1"
         android:layout_width="122dp"
         android:layout_height="75dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="1"
@@ -129,36 +119,35 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/text2"
         app:layout_constraintTop_toTopOf="@+id/text2"
-        tools:layout_editor_absoluteX="9dp"
-        app:layout_constraintHorizontal_bias="1.0" />
+        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/text2"
         android:layout_width="122dp"
         android:layout_height="75dp"
-        android:layout_marginTop="30dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="2"
         android:textSize="35sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currSingleMinutes" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="190dp" />
 
     <TextView
         android:id="@+id/text3"
         android:layout_width="121dp"
         android:layout_height="75dp"
-        android:layout_marginLeft="0dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="3"
         android:textSize="35sp"
         app:layout_constraintLeft_toRightOf="@+id/text2"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/text2" />
+        app:layout_constraintTop_toTopOf="@+id/text2"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/text8"
@@ -168,11 +157,8 @@
         android:gravity="center_horizontal"
         android:text="8"
         android:textSize="35sp"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/text5"
-        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="@+id/text2"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/text2" />
 
     <TextView
@@ -183,20 +169,14 @@
         android:gravity="center_horizontal"
         android:text="0"
         android:textSize="35sp"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/text8"
         app:layout_constraintRight_toLeftOf="@+id/text9"
-        android:layout_marginRight="0dp"
-        app:layout_constraintLeft_toRightOf="@+id/text7"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintLeft_toRightOf="@+id/text7" />
 
     <TextView
         android:id="@+id/text9"
         android:layout_width="122dp"
         android:layout_height="80dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:text="9"
@@ -216,11 +196,8 @@
         android:text="9"
         android:textSize="35sp"
         android:visibility="visible"
-        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="@+id/text9"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/text9"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/text9" />
 
     <TextView
@@ -231,20 +208,14 @@
         android:gravity="center_horizontal"
         android:text="7"
         android:textSize="35sp"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/text4"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/text4"
-        app:layout_constraintRight_toLeftOf="@+id/text5"
-        android:layout_marginRight="0dp" />
+        app:layout_constraintRight_toLeftOf="@+id/text5" />
 
     <ImageButton
         android:id="@+id/textClearLast"
         android:layout_width="122dp"
         android:layout_height="80dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:scaleType="centerInside"
@@ -261,7 +232,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="serif"
         android:text="0"
-        android:textSize="35sp"
+        android:textSize="60sp"
         app:layout_constraintTop_toTopOf="@+id/currTenMinutes"
         app:layout_constraintLeft_toRightOf="@+id/currTenMinutes" />
 
@@ -271,7 +242,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="serif"
         android:text="0"
-        android:textSize="35sp"
+        android:textSize="60sp"
         app:layout_constraintLeft_toRightOf="@+id/currTenSeconds"
         app:layout_constraintTop_toTopOf="@+id/currTenSeconds" />
 
@@ -285,8 +256,9 @@
         android:paddingBottom="6dp"
         android:textSize="15sp"
         app:layout_constraintLeft_toRightOf="@+id/currSingleMinutes"
-        app:layout_constraintTop_toTopOf="@+id/currSingleMinutes"
-        android:layout_marginTop="21dp" />
+        android:layout_marginLeft="-1dp"
+        app:layout_constraintBottom_toBottomOf="@+id/currSingleMinutes"
+        android:layout_marginBottom="0dp" />
 
     <TextView
         android:id="@+id/currentSeconds"
@@ -299,4 +271,5 @@
         android:textSize="15sp"
         app:layout_constraintTop_toTopOf="@+id/labelMinutes"
         app:layout_constraintLeft_toRightOf="@+id/currSingleSeconds" />
+
 </android.support.constraint.ConstraintLayout>
