--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -205,7 +205,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text6" />
 
     <ImageButton
-        android:id="@+id/textGo"
+        android:id="@+id/startTimer"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="80dp"
@@ -216,7 +216,7 @@
         android:src="@drawable/next"
         android:text="9"
         android:textSize="35sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="@+id/text9"
         app:layout_constraintRight_toRightOf="@+id/text9"
         app:layout_constraintTop_toBottomOf="@+id/text9" />
@@ -236,7 +236,7 @@
         app:layout_constraintRight_toLeftOf="@+id/text5" />
 
     <ImageButton
-        android:id="@+id/textClearLast"
+        android:id="@+id/clearLastNumber"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="122dp"
         android:layout_height="80dp"
@@ -247,7 +247,7 @@
         android:src="@drawable/backspace"
         android:text="7"
         android:textSize="35sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="@+id/text7"
         app:layout_constraintRight_toLeftOf="@+id/text0"
         app:layout_constraintTop_toBottomOf="@+id/text7" />
