--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -236,7 +236,7 @@
         app:layout_constraintRight_toLeftOf="@+id/text5" />
 
     <ImageButton
-        android:id="@+id/clearLastNumber"
+        android:id="@+id/deleteLastNumber"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="122dp"
         android:layout_height="80dp"
