--- a/app/src/main/res/layout/activity_monkey_free.xml
+++ b/app/src/main/res/layout/activity_monkey_free.xml
@@ -24,12 +24,13 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="serif"
         android:text="The Monkey Mind Slipped Away!"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/monkeyFree"
-        android:textSize="24sp"/>
+        android:textSize="22sp"
+        app:layout_constraintHorizontal_bias="0.5" />
 
 </android.support.constraint.ConstraintLayout>
